<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_home"
        android:title="@string/menu_home_string"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_profile"
        android:title="@string/menu_perfil_string"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_notificacion"
        android:title="@string/menu_notificacoes_string"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_reminders"
        android:title="@string/menu_lembretes_string"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_configuration"
        android:title="@string/menu_configuracoes_string"
        app:showAsAction="never" />

</menu>