<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Space
            android:id="@+id/consult_detail_space_0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/spacing_xxl"
            />
        <Space
            app:layout_constraintTop_toBottomOf="@id/consult_detail_space_0"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/consult_detail_space_1"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/spacing_md"
            />

        <TextView
            android:id="@+id/consult_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/consult_detail_space_1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/medium"
            android:layout_marginTop="@dimen/small"
            android:text="@string/consult_detail_title_text"
            android:textStyle="bold"
            style="@style/TextAppearance.AppCompat.Headline"
            />

        <ImageView
            android:id="@+id/consult_detail_doctor_img"
            app:layout_constraintTop_toTopOf="@+id/consult_detail_doctor"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/medico"
            android:contentDescription="@string/acessibility_consult_detail_doctor_icon" />
        <TextView
            android:id="@+id/consult_detail_doctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small"
            app:layout_constraintTop_toBottomOf="@+id/consult_detail_title"
            app:layout_constraintStart_toEndOf="@+id/consult_detail_doctor_img"
            android:text="@string/consult_detail_doctor_text"
            android:textStyle="bold|italic"
            style="@style/TextAppearance.AppCompat.Title"
            />

        <TextView
            android:id="@+id/consult_detail_symptoms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/consult_detail_doctor"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/small"
            android:layout_marginStart="@dimen/medium"
            android:text="@string/consult_detail_symptoms_text"
            android:textStyle="bold"
            style="@style/TextAppearance.AppCompat.Medium"
            />
        <LinearLayout
            android:id="@+id/consult_detail_symptoms_list"
            app:layout_constraintTop_toBottomOf="@id/consult_detail_symptoms"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="@dimen/medium">
            <TextView
                android:id="@+id/consult_detail_symptoms_list_item_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small"
                android:layout_marginStart="@dimen/medium"
                android:text="@string/consult_detail_symptoms_list_item_1_text"
                style="@style/TextAppearance.AppCompat.Small"
                />
            <TextView
                android:id="@+id/consult_detail_symptoms_list_item_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small"
                android:layout_marginStart="@dimen/medium"
                android:text="@string/consult_detail_symptoms_list_item_2_text"
                style="@style/TextAppearance.AppCompat.Small"
                />
            <TextView
                android:id="@+id/consult_detail_symptoms_list_item_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small"
                android:layout_marginStart="@dimen/medium"
                android:text="@string/consult_detail_symptoms_list_item_3_text"
                style="@style/TextAppearance.AppCompat.Small"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/consult_detail_prescriptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/consult_detail_symptoms_list"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/small"
            android:layout_marginStart="@dimen/medium"
            android:text="@string/consult_detail_prescriptions_text"
            android:textStyle="bold"
            style="@style/TextAppearance.AppCompat.Medium"
            />
        <LinearLayout
            android:id="@+id/consult_detail_prescriptions_list"
            app:layout_constraintTop_toBottomOf="@id/consult_detail_prescriptions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="@dimen/medium">
            <TextView
                android:id="@+id/consult_detail_prescriptions_list_item_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small"
                android:layout_marginStart="@dimen/medium"
                android:text="@string/consult_detail_prescriptions_list_item_1_text"
                style="@style/TextAppearance.AppCompat.Small"
                />
            <TextView
                android:id="@+id/consult_detail_prescriptions_list_item_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small"
                android:layout_marginStart="@dimen/medium"
                android:text="@string/consult_detail_prescriptions_list_item_2_text"
                style="@style/TextAppearance.AppCompat.Small"
                />
            <TextView
                android:id="@+id/consult_detail_prescriptions_list_item_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small"
                android:layout_marginStart="@dimen/medium"
                android:text="@string/consult_detail_prescriptions_list_item_3"
                style="@style/TextAppearance.AppCompat.Small"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/consult_detail_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/consult_detail_prescriptions_list"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/small"
            android:layout_marginStart="@dimen/medium"
            android:text="@string/consult_detail_notes_text"
            android:textStyle="bold"
            style="@style/TextAppearance.AppCompat.Medium"
            />
        <TextView
            android:id="@+id/consult_detail_notes_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/consult_detail_notes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/small"
            android:paddingHorizontal="@dimen/medium"
            android:text="@string/consult_detail_notes_description_text"
            android:textStyle="normal"
            style="@style/TextAppearance.AppCompat.Body1"
            />

        <Button
            android:id="@+id/consult_detail_contact"
            app:layout_constraintTop_toBottomOf="@+id/consult_detail_notes_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consult_detail_contact_button_text"
            app:icon="@drawable/consultando"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>