<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Space
        android:id="@+id/reminder_form_space_0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/spacing_xxl"
        />
    <Space
        app:layout_constraintTop_toBottomOf="@id/reminder_form_space_0"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/reminder_form_space_1"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/spacing_md"
        />

    <TextView
        android:id="@+id/reminder_form_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/reminder_form_space_1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/medium"
        android:layout_marginTop="@dimen/small"
        android:text="@string/reminder_form_title"
        android:textStyle="bold"
        style="@style/TextAppearance.AppCompat.Headline"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reminder_form_input_title"
        app:layout_constraintTop_toBottomOf="@id/reminder_form_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/small"
        android:layout_marginHorizontal="@dimen/medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reminder_form_hint_input_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextReminderTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reminder_form_input_desc"
        app:layout_constraintTop_toBottomOf="@id/reminder_form_input_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/small"
        android:layout_marginHorizontal="@dimen/medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reminder_form_hint_input_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextReminderDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reminder_form_input_location"
        app:layout_constraintTop_toBottomOf="@id/reminder_form_input_desc"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/small"
        android:layout_marginHorizontal="@dimen/medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reminder_form_hint_input_location"
        app:startIconDrawable="@drawable/location">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextReminderLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reminder_form_input_date"
        app:layout_constraintTop_toBottomOf="@id/reminder_form_input_location"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/small"
        android:layout_marginHorizontal="@dimen/medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reminder_form_hint_input_date"
        app:startIconDrawable="@drawable/calendario"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextReminderDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reminder_form_input_time"
        app:layout_constraintTop_toBottomOf="@id/reminder_form_input_date"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/small"
        android:layout_marginHorizontal="@dimen/medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reminder_form_hint_input_hour"
        app:startIconDrawable="@drawable/relogio_de_parede">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextReminderHour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/reminder_form_cad_button"
        app:layout_constraintTop_toBottomOf="@+id/reminder_form_input_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reminder_form_confirm_button"
        app:icon="@drawable/marca_de_verificacao"
        />

</androidx.constraintlayout.widget.ConstraintLayout>