<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/reminder_item_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/cardbox_outter_border_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/medium">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cardbox_inner_border_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/home_last_atend_doctor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/reminderTitleValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description_title_reminder_card"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/reminderReminderDateTimeValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small"
                        android:text="@string/description_date_hour_reminder_card"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary" />

                    <TextView
                        android:id="@+id/reminderDescriptionValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small"
                        android:text="@string/description_consultanting_reminder_card"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary" />
                </LinearLayout>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/reminder_item_edit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:src="@drawable/botao_editar"
                    app:fabSize="mini"
                    app:layout_constraintBottom_toBottomOf="@+id/home_last_atend_doctor"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:contentDescription="@string/acessibility_reminder_edit_button_string" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Space
        android:layout_width="@dimen/small"
        android:layout_height="@dimen/small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reminder_item_card" />
</androidx.constraintlayout.widget.ConstraintLayout>